# adk

./: .env.example  .gitignore  =6.0.1  A1.md  A2.md  AGENT.md  ARCHITECTURE.md  DEVELOPMENT_SETUP.md  Dockerfile  FIXME.md  Makefile  README.md  REFACTOR_PLAN.md  ROADMAP.md  RUNTIME.md  SPEC.md  SRE-Assistant.md  TASKS.md  TESTING.md  TESTING_GUIDE.md  TODO.md  TREE.md  adk-repository-structure.md  adk.yaml  adk_config.yaml  adk_web_server.py  agent.py  artifacts.py  auth-factory.md  code-review-checklist.md  diagrams.md  docker-compose.yml  go.mod  google-sre-book.md  memory.py  new-factory.md  openapi.yaml  p0-task-review.md  project-architecture.md  prompt.md  (+15 more)
.github/: pull_request_template.md
Eval/: evaluation.py
adk/: registry.py
adk-references/: README.md
adk-runtime/: main.py
adk_runtime/: main.py
config/: a2a-tls.yaml
data/: schema.json
deployment/: agent_engine_deploy.py  cloudbuild.trigger.json  cloudbuild.yaml  deploy.py  deployment_factory.py
docker/: docker-compose.yaml
docs/: ADK.md  ADK_WEB_UI.md  CHANGELOG.md  CHANGES.md  CONFIG.md  EXTENDING.md  FRONTEND_HITL.md  GCP_OBSERVABILITY.md  GCP_OTEL.md  HARDCODE_AUDIT.md  K8S_OPERATIONS.md  LOGGING.md  MIGRATIONS.md  OBSERVABILITY.md  OBS_STACK.md  OBS_STACK_PLUS.md  OPERATIONS.md  POLICY.md  RAG.md  README.md  SECURITY.md  TODO_SRE.md  TOOL_TESTING_GUIDE.md  V14_NOTES.md  adk-agent-samples.md  adk-project-architecture.md  adk-repository-structure.md  agent-list.md  agents-companion-v2.md  reference-adk-agent-samples-1.md  references.md  (+7 more)
docs-bak/: DEV_SETUP.md  code-review-checklist.md
(+774 files in other folders)
